# pico_emm

./: CMakeLists.txt  README.md
configs/: AppConfig.h  FreeRTOSConfig.h  lwipopts.h
fonts/: convert_to_hex.sh
fonts/Roboto/: Roboto.af  Roboto.af.carr
http_content/: index.html
include/: FT6236.h  FreeRTOSConfig.h  draw.h  emm.h  emm_structs.h  history_data.h  inverter.h  inverter_control.h  lwipopts.h  meter.h  mutex.h  ntp_client.h  persistent_storage.h  psram.h  ranges_util.h  settings.h  static_types.h  string_util.h  usb_interface.h  webserver.h  wifi_storage.h
modbus_layouts/: inverter_sunspec.h  meter_sunspec.h
src/: FT6236.cpp  draw.cpp  emm.cpp  font_file.cpp  history_data.cpp  inverter.cpp  main.cpp  memmap_mp_rp2350_psram.ld  meter.cpp  psram.cpp  sys_arch.c
